--- a/clients/templates/login.html
+++ b/clients/templates/login.html
@@ -1,18 +1,41 @@
 {% extends 'base.html' %}
- 
+{%load static%}
 {% block content %}
-<h1>Connexion</h1>
 <form method="POST">
 {% csrf_token %}
-<p>
-    <label for="username">Nom d'utilisateur</label>
-    <input id="username" type="text" name="username">
-</p>
-<p>
-    <label for="password ">Mot de passe</label>
-    <input id="password" type="password" name="password">
-</p>
-<button type="submit">Se connecter</button>
-</form>
+<div class="log-form">
+    <h2>Login to your account</h2>
+    <form>
+
+    <p>
+        <label for="username">Nom d'utilisateur</label>
+        <input id="username" type="text" name="username">
+    </p>
+
+    <p>
+        <label for="password ">Mot de passe</label>
+        <input id="password" type="password" name="password">
+    </p>
+
+        <button type="submit" class="btn">Se connecter</button>
+
+    </form>
+</div>
 
 {% endblock %}
+
+<div class="login-card">
+    <h1>Log-in</h1><br>
+  <form>
+    <input type="text" name="user" placeholder="Username">
+    <input type="password" name="pass" placeholder="Password">
+    <input type="submit" name="login" class="login login-submit" value="login">
+  </form>
+    
+  <div class="login-help">
+    <a href="#">Register</a> • <a href="#">Forgot Password</a>
+  </div>
+</div>
+
+
+
