--- a/clients/templates/signup.html
+++ b/clients/templates/signup.html
@@ -1,18 +1,34 @@
 {% extends 'base.html' %}
- 
+{%load static%}
 {% block content %}
-<h1>S'inscrire</h1>
 <form method="POST">
 {% csrf_token %}
-<p>
-    <label for="username">Nom d'utilisateur</label>
-    <input id="username" type="text" name="username">
-</p>
-<p>
-    <label for="password ">Mot de passe</label>
-    <input id="password" type="password" name="password">
-</p>
-<button type="submit">S'inscrire</button>
-</form>
+
+<div class="log-form">
+    <h2>Signup</h2>
+    <form>
+
+    <p>
+        <label for="username">Nom d'utilisateur</label>
+        <input id="username" type="text" name="username">
+    </p>
+
+    <p>
+        <label for="email">Email</label>
+        <input id="email" type="email" name="email">
+    </p>
+
+    <p>
+        <label for="password ">Mot de passe</label>
+        <input id="password" type="password" name="password">
+    </p>
+
+        <button type="submit" class="btn">S'inscrire</button>
+
+    </form>
+</div>
+
 
 {% endblock %}
+
+
