--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+{%load static%}
 <head>
+    <link rel="stylesheet" href="{%static 'css/base.css' %}">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RT - SHOP</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
 </head>
+
 <body>
-{% if user.is_authenticated %}
-<p>Nom d'utilisateur :{{user.username}}</p>
-<a href="{% url 'logout' %}">Se déconnecter</a>
-{% else %}
-<a href="{% url 'signup' %}">S'inscrire</a>
-<a href="{% url 'login' %}">Se connecter</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/home">RT SHOP</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <a class="nav-link" href="/allproduits">PRODUITS</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/index">COMMANDES</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/affiche">PANIER</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">{% if user.is_authenticated %}<p>{{user.username}}</p>{% endif %}</a>
+              </li>
+            </ul>
 
-{% endif %}
 
+            <form class="d-flex">
+              <input class="form-control me-2" type="Recherche" placeholder="Recherche" aria-label="Recherche">
+              <button class="btn btn-outline-success" type="submit">Recherche</button>
+            {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}"> Log out</a>
+            {% else %}
+            <a href="{% url 'login' %}"> Log in</a>
+            <a href="{% url 'signup' %}">Sign up</a>
 
+            {% endif %} 
+            </form>
+          </div>
+        </div>
+      </nav>   
+      
+      
+
+</body>
+
+<body>
 {% block content %}
+
 {% endblock %}
 </body>
+
 </html>
