--- a/drive/static/css/base.css
+++ b/drive/static/css/base.css
@@ -4,17 +4,18 @@
    font-family : 'Quicksand', cursive;
    text-align: center;
    margin : 0px auto 0px;
+   z-index: 2; 
 }
 
 html{   
 min-height: 100%;  
-background: linear-gradient(217deg, rgba(201, 245, 244, 0.692), rgba(255,0,0,0) 70.71%),
+background: linear-gradient(2deg, rgba(211, 246, 255, 0.8), rgba(255,0,0,0) 70.71%),
             linear-gradient(127deg, rgba(205, 207, 209, 0.8), rgba(0,255,0,0) 70.71%),
-            linear-gradient(336deg, rgba(211, 246, 255, 0.8), rgba(0,0,255,0) 70.71%);      
-}
+            linear-gradient(336deg, rgba(211, 246, 255, 0.8), rgba(0,0,255,0) 70.71%);
+          }
 
 p{
-    color: rgb(27, 161, 171);
+    color: rgb(63, 114, 117);
 }
 
 
@@ -22,60 +23,30 @@ form{
   background-color: rgb(161, 184, 185);
   font-family : 'Hind siliguri', cursive;
   box-sizing: border-box; 
+  
+}
+
+main{
+  background-image: url(Logo.png);
+  z-index: 2;
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 h1.home{
-  font-size: 55px;
+  font-size: 35px;
 }
 
 div.home{
 text-align: center;
-font-size: 40px;
+font-size: 25px;
 height: 150px;
-margin-top: 220px;
-background: linear-gradient(120deg,#dcbdbd 0%,#4558b6 100%);
+margin-top: 20px;
+background: linear-gradient(120deg,#000000 0%,#5368d1 100%);
 background-clip: border-box;
 -webkit-background-clip: text;
 -webkit-text-fill-color: transparent;
+min-height: 100%;
+
 }
 div:last-of-type span.home {
   margin-left:-2000px;
@@ -102,37 +73,17 @@ div:last-of-type span.home {
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 @import url(https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700|Open+Sans:400,300,600);
 
 
-body {
+.body {
   font-family: 'open sans', helvetica, arial, sans;
 background:url(http://farm8.staticflickr.com/7064/6858179818_5d652f531c_h.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  z-index: 3;
 }
 
 @grey:#2a2a2a;
@@ -152,11 +103,31 @@ background:url(http://farm8.staticflickr.com/7064/6858179818_5d652f531c_h.jpg) n
   transform: translate(-50%,-50%);
   
   box-shadow: 5px 5px 5px rgba(0,0,0,.25);
-  
   }
+
+
+
+
+
+
+
+
+.produit {
+  display: flex;
+  box-sizing: border-box;
+  padding: 1rem;
+  border-radius: 5px;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
+  background: #fff;
+  }
+
   
+ 
 
 
 
-    
-}
+
