--- a/drive/templates/drive/add_catprod.html
+++ b/drive/templates/drive/add_catprod.html
@@ -7,14 +7,22 @@
 
 
 {% block content %}
-<div class="form-articles">
-    <form class="quest" method="post" action="">
-      {% csrf_token %}
-      {{form.nom|as_crispy_field}}
-      {{form.descriptif|as_crispy_field}}
-      <div class="button-valid">
-        <p>* - Champs obligatoires </p>
-        <input class="btn btn-success" type="submit" name="submit" value="Valider">
-      </div>
-  </div>
+<head>
+    <title> ajouter une catégorie de produit </title>
+  </head>
+  <body class="body-article-list">
+    <h1 class="top-article-list shadow p-3 mb-5 bg-body rounded">Page d'ajout d'une nouvelle catégorie de produit</h1>
+  
+    <div class="form-articles">
+      <form class="quest" method="post" action="">
+        {% csrf_token %}
+        {{form.nom|as_crispy_field}}
+        {{form.descriptif|as_crispy_field}}
+        <div class="button-valid">
+          <p>* - Champs obligatoires </p>
+          <input class="btn btn-success" type="submit" name="submit" value="Valider">
+          <a class="btn btn-outline-danger" href="{% url 'all_catprod' %}">Annuler</a>
+        </div>
+    </div>
+  </body>
 {% endblock %}
