--- a/clients/templates/signup.html
+++ b/clients/templates/signup.html
@@ -1,33 +1,25 @@
 {% extends 'base.html' %}
 {%load static%}
 {% block content %}
+<head>
+    <title> Inscription </title>
+  </head>
 <form method="POST">
 {% csrf_token %}
+<body class= "login-page-back">
 
-<div class="log-form">
-    <h2>Signup</h2>
-    <form>
-
-    <p>
-        <label for="username">Nom d'utilisateur</label>
-        <input id="username" type="text" name="username">
-    </p>
-
-    <p>
-        <label for="email">Email</label>
-        <input id="email" type="email" name="email">
-    </p>
-
-    <p>
-        <label for="password ">Mot de passe</label>
-        <input id="password" type="password" name="password">
-    </p>
-
-        <button type="submit" class="btn">S'inscrire</button>
-
+<div class="wrapper">
+    <form class="form-signin">       
+        <h2>Inscrivez-vous</h2>
+        <input type="text" class="form-control" name="username" placeholder="Adresse E-Mail" required="" autofocus="" />
+      <input type="text" class="form-control" name="username" placeholder="Nom d'utilisateur" required="" autofocus="" />
+      <input type="password" class="form-control" name="password" placeholder="Mot de passe" required=""/>      
+      <label class="checkbox">
+      </label>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">S'inscrire</button>   
     </form>
-</div>
-
+  </div>
+</body>
 
 {% endblock %}
 
