--- a/templates/base.html
+++ b/templates/base.html
@@ -2,21 +2,22 @@
 <html lang="en">
 {%load static%}
 <head>
-    <link rel="stylesheet" href="{%static '/css/base.css' %}">
+    <link rel="stylesheet" href="{%static '/css/basee.css' %}", "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
+    
 </head>
 
 <body>
-  
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/home">RT SHOP</a>
+          <img src="{% static "media/achats.png" %}"  alt="home" width="30" style="margin-right: 10px;" />
+          <a class="navbar-brand" href="/home">RT - SHOP</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -28,68 +29,69 @@
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'all_commandes_ordered_by_user' %}">COMMANDES</a>
               </li>
-              {% if user.panier %}
+              {% if user.panier.commandes.count  %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'panier' %}">PANIER ({{user.panier.commandes.count}})</a>
               </li>
+              
               {% endif %} 
               {% if user.is_superuser %} 
+
               
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Ajout
+                  Gestion du site
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item disabled btn-sm">Gestion des catégories</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li class="nav-item"><a class="dropdown-item" href="{% url 'all_catprod' %}""> Tout les catégories de produit </a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="{% url 'add_catprod' %}""> Ajouter une catégorie de produit </a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item disabled btn-sm">Gestion des produits</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="{% url 'all_produits_admin' %}""> Tout les produits </a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="{% url 'add_produit' %}""> Ajouter un produit </a></li>
                 </ul>
               </li>
-
+            </div>
               {% endif %}
-               
-              <li class="nav-item">
-                <a class="nav-link">{% if user.is_authenticated %}<p>{{user.username}}</p>{% endif %}</a>
-              </li>
 
-              {% if user.is_superuser %}
-              <li class="nav-item">
-                <a class="nav-item" href="{% url 'add_catprod' %}""> Ajouter une catégorie de produit </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-item" href="{% url 'add_produit' %}""> Ajouter un produit </a>
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-item" href="{% url 'all_catprod' %}"">Tout les catégories de produit </a>
-              
-              </li>
-
-
-              {% endif %}
-            </ul>
 
             <form class="d-flex">
-              <input class="form-control me-2" type="Recherche" placeholder="Recherche" aria-label="Recherche">
-              <button class="btn btn-outline-success" type="submit">Recherche</button>
-            {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}"> Log out</a>
-            {% else %}
-            <a href="{% url 'login' %}"> Log in</a>
-            <a href="{% url 'signup' %}">Sign up</a>
-
-            {% endif %} 
+              <li class="nav-item dropdown text-end">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  <img src="{% static "media/profil.png" %}" alt="home" width="30" />
+                </a>
+                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                  {% if user.is_authenticated %}
+                   <li class="nav-item">
+                    <a class="dropdown-item"{% if user.is_authenticated %}<p>{{user.username}}</p>{% endif %}</a>
+                    {% endif %}
+                  {% if user.is_authenticated %}</li>
+                  <li class="nav-item"><a class="dropdown-item" href="{% url 'logout' %}"> log out</a></li>
+                  {% else %}
+                  <li class="nav-item"><a class="dropdown-item" href="{% url 'login' %}"> Connection</a></li>
+                  <li class="nav-item"><a class="dropdown-item" <a href="{% url 'signup' %}">Inscription</a></li>
+                  </ul>
+                  </li>
+                  {% endif %} 
             </form>
           </div>
         </div>
-      </nav>        
+      </nav>     
+
+
    
-<main>
-  </main>
+<main> 
+    </main>
 </body>
 
 <body>
+
+
+    
+
+
 {% block content %}
 
 {% endblock %}
