--- a/drive/templates/drive/add_produit.html
+++ b/drive/templates/drive/add_produit.html
@@ -26,7 +26,7 @@
         <div class="button-valid">
           <p>* - Champs obligatoires </p>
           <input class="btn btn-success" type="submit" name="submit" value="Valider">
-          <a class="btn btn-outline-danger" href="{% url 'all_catprod' %}">Annuler</a>
+          <a class="btn btn-outline-danger" href="{% url 'all_produits_admin' %}">Annuler</a>
         </div>
     </div>
   </body>
