--- a/drive/templates/drive/catprod_detail.html
+++ b/drive/templates/drive/catprod_detail.html
@@ -5,8 +5,8 @@
 <head>
     <title> catprod.nom </title>
   </head>
-
-<div class="card text-center">
+  <body class="body-article-list">
+    <div class="card text-center">
     <div class="card-header">
         {{ catprod.nom}}
     </div>
@@ -20,6 +20,6 @@
       veuillez en référer au développeur à l’adresse suivante : super@super.com
     </div>
   </div>
-
+  </body>
 {% endblock %}
 
