--- a/drive/templates/drive/home.html
+++ b/drive/templates/drive/home.html
@@ -47,8 +47,8 @@
           </div>
         </div>
       </main>
-    <div class="img">
+    <!-- <div class="img">
   <img src="{% static "media/Logo.png" %}" alt="home" width="400" />
-  </div>
+  </div> -->
   </body>
 {% endblock %}
