--- a/drive/templates/drive/panier.html
+++ b/drive/templates/drive/panier.html
@@ -5,8 +5,8 @@
 <head>
     <title> Mon panier </title>
      <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-    <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
+    <!-- <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+    <script defer src="https://pyscript.net/alpha/pyscript.js"></script> -->
   </head>
 
 <body class="body-article-list">
@@ -43,19 +43,19 @@
 {% endfor %}
 
 </table>
-<div class="""total">
+<!-- <div class="""total">
 <h4>Prix total: </h4>
 <h1 id="res"></h1>
        <py-script>
 res = 0
-a = 5
-b = quantite
+a = ("""select prix from Produits WHERE commande)
+b = ("""select quantite From commande""")
 res = a * b
 
 s = f"{res:.2f} €"
 pyscript.write('res', s)
-        </py-script>
-</div>
+        </py-script> 
+</div> -->
 <div class="d-grid gap-2 col-6 mx-auto">
   <a class="btn btn-light" href="{% url 'commander_panier' %}" type="button">Commander les produits du panier</a>
   <a class="btn btn-danger btn-sm" type="button" href="{% url 'delete_panier' %}">Supprimer le panier</a>
