--- a/clients/templates/login.html
+++ b/clients/templates/login.html
@@ -6,20 +6,24 @@
   </head>
 <form method="POST">
 {% csrf_token %}
+
 <body class= "login-page-back">
-
-<div class="wrapper">
-    <form class="form-signin">       
-        <h2>Connectez-vous</h2>
+<div class="login-box">
+  <h2>Connexion RT - SHOP</h2>
+  <form>
+    <div class="user-box">
       <input type="text" class="form-control" name="username" placeholder="Nom d'utilisateur" required="" autofocus="" />
-      <input type="password" class="form-control" name="password" placeholder="Mot de passe" required=""/>      
-      <label class="checkbox">
-      </label>
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Se connecter</button>   
-    </form>
-  </div>
-
-  </div>
+    
+    </div>
+    <div class="user-box">
+      <input type="password" class="form-control" name="password" placeholder="Mot de passe" required=""/>
+      
+    </div>
+    <a href="#">
+       <button class="btn btn-lg btn-primary btn-block" type="submit">Se connecter</button>
+    </a>
+  </form>
+</div>
 </body>
 
 
