--- a/templates/base.html
+++ b/templates/base.html
@@ -1,102 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
 {%load static%}
-<head>
-    <link rel="stylesheet" href="{%static '/css/basee.css' %}", "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 
-    
+<head>
+  <link rel="stylesheet" href="{%static '/css/base.css' %}"
+    , "//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+    integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+    crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-          <img src="{% static "media/achats.png" %}"  alt="home" width="30" style="margin-right: 10px;" />
-          <a class="navbar-brand" href="/home">RT - SHOP</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link" href="/allproduits">PRODUITS</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'all_commandes_ordered_by_user' %}">COMMANDES</a>
-              </li>
-              {% if user.panier.commandes.count  %}
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'panier' %}">PANIER ({{user.panier.commandes.count}})</a>
-              </li>
-              
-              {% endif %} 
-              {% if user.is_superuser %} 
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <img src="{% static "media/achats.png" %}" alt="home" width="30" style="margin-right: 10px;"/>
+      <a class="navbar-brand" href="{% url 'home' %}">RT - SHOP</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link" href="/allproduits">PRODUITS</a>
+          </li>
+          {% if user.is_authenticated %}
 
-              
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Gestion du site
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item disabled btn-sm">Gestion des catégories</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li class="nav-item"><a class="dropdown-item" href="{% url 'all_catprod' %}""> Tout les catégories de produit </a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="{% url 'add_catprod' %}""> Ajouter une catégorie de produit </a></li>
-                  <li><a class="dropdown-item disabled btn-sm">Gestion des produits</a></li>
-                  <li><hr class="dropdown-divider"></li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'all_commandes_ordered_by_user' %}">COMMANDES</a>
+          </li>
+          {% endif %}
+          {% if user.panier.commandes.count %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'panier' %}">PANIER ({{user.panier.commandes.count}})</a>
+          </li>
 
-                  <li class="nav-item"><a class="dropdown-item" href="{% url 'all_produits_admin' %}""> Tout les produits </a></li>
-                  <li class="nav-item"><a class="dropdown-item" href="{% url 'add_produit' %}""> Ajouter un produit </a></li>
+          {% endif %}
+          {% if user.is_superuser %}
+
+
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-bs-toggle="dropdown" aria-expanded="false">
+              Gestion du site
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <li><a class="dropdown-item disabled btn-sm">Gestion des catégories</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li class="nav-item"><a class="dropdown-item" href="{% url 'all_catprod' %}""> Tout les catégories de produit </a></li>
+                  <li class=" nav-item"><a class="dropdown-item" href="{% url 'add_catprod' %}""> Ajouter une catégorie de produit </a></li>
+                  <li><a class=" dropdown-item disabled btn-sm">Gestion des produits</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+
+              <li class="nav-item"><a class="dropdown-item" href="{% url 'all_produits_admin' %}""> Tout les produits </a></li>
+                  <li class=" nav-item"><a class="dropdown-item" href="{% url 'add_produit' %}""> Ajouter un produit </a></li>
 
                 </ul>
               </li>
             </div>
               {% endif %}
-
-
-            <form class="d-flex">
-              <li class="nav-item dropdown text-end">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  <img src="{% static "media/profil.png" %}" alt="home" width="30" />
+            <form class=" d-flex">
+              <li class="nav-item dropdown">
+                {% if user.is_authenticated %}
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">Bienvenue - {{user.username}}</a>
+                {% else %}
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                  data-bs-toggle="dropdown" aria-expanded="false">
+                  SE CONNECTER / S'INSCRIRE
                 </a>
-                  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                {% endif %}
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   {% if user.is_authenticated %}
-                   <li class="nav-item">
-                    <a class="dropdown-item"{% if user.is_authenticated %}<p>{{user.username}}</p>{% endif %}</a>
-                    {% endif %}
-                  {% if user.is_authenticated %}</li>
-                  <li class="nav-item"><a class="dropdown-item" href="{% url 'logout' %}"> log out</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="{% url 'logout' %}"> Deconnexion</a></li>
                   {% else %}
-                  <li class="nav-item"><a class="dropdown-item" href="{% url 'login' %}"> Connection</a></li>
+                  <li class="nav-item"><a class="dropdown-item" href="{% url 'login' %}"> Connexion</a></li>
                   <li class="nav-item"><a class="dropdown-item" <a href="{% url 'signup' %}">Inscription</a></li>
-                  </ul>
-                  </li>
-                  {% endif %} 
-            </form>
-          </div>
-        </div>
-      </nav>     
-
-
-   
-<main> 
-    </main>
+                </ul>
+              </li>
+              {% endif %}
+              </form>
+      </div>
+    </div>
+  </nav>
+  <main>
+  </main>
 </body>
-
 <body>
+  {% block content %}
 
-
-    
-
-
-{% block content %}
-
-{% endblock %}
+  {% endblock %}
 
 </body>
 
